--- a/documentation/latex/annotated.tex
+++ b/documentation/latex/annotated.tex
@@ -1,4 +1,4 @@
-\doxysection{Class List}
+\doxysubsection{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{\mbox{\hyperlink{classprog_seq}{prog\+Seq}} }{\pageref{classprog_seq}}{}
 \end{DoxyCompactList}
