--- a/libraries/progSeq/documentation/latex/refman.tex
+++ b/libraries/progSeq/documentation/latex/refman.tex
@@ -89,11 +89,11 @@
     \fancyhead[LE, RO]{\bfseries\thepage}
     \fancyhead[LO]{\bfseries\rightmark}
     \fancyhead[RE]{\bfseries\leftmark}
-    \fancyfoot[LO, RE]{\bfseries\scriptsize Generated on Sun Feb 27 2022 12\+:43\+:35 for Prog\+Seq by Doxygen }
+    \fancyfoot[LO, RE]{\bfseries\scriptsize Generated on Wed Mar 2 2022 22\+:31\+:25 for Prog\+Seq by Doxygen }
   }
   \fancypagestyle{plain}{
     \fancyhf{}
-    \fancyfoot[LO, RE]{\bfseries\scriptsize Generated on Sun Feb 27 2022 12\+:43\+:35 for Prog\+Seq by Doxygen }
+    \fancyfoot[LO, RE]{\bfseries\scriptsize Generated on Wed Mar 2 2022 22\+:31\+:25 for Prog\+Seq by Doxygen }
     \renewcommand{\headrulewidth}{0pt}
   }
   \pagestyle{fancyplain}
@@ -161,9 +161,9 @@
   \begin{center}%
   {\Large Prog\+Seq}\\
   \vspace*{1cm}
-  {\large Generated on Sun Feb 27 2022 12\+:43\+:35 for Prog\+Seq by Doxygen 1.9.3}\\
+  {\large Generated on Wed Mar 2 2022 22\+:31\+:25 for Prog\+Seq by Doxygen 1.9.3}\\
     \vspace*{0.5cm}
-    {\small Sun Feb 27 2022 12:43:35}
+    {\small Wed Mar 2 2022 22:31:25}
   \end{center}
   \end{titlepage}
   \pagenumbering{roman}
@@ -172,9 +172,8 @@
   % re-enable anchors again
   \hypersetup{pageanchor=true}
 %--- Begin generated contents ---
-\doxysection{Class Documentation}
-\input{classprog_seq}
 \doxysection{File Documentation}
+\input{prog_seq_8h}
 \input{prog_seq_8h_source}
 %--- End generated contents ---
 % Index
