--- a/libraries/progSeq/documentation/latex/files.tex
+++ b/libraries/progSeq/documentation/latex/files.tex
@@ -1,4 +1,4 @@
 \doxysubsection{File List}
 Here is a list of all documented files with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\mbox{\hyperlink{prog_seq_8h_source}{prog\+Seq.\+h}} }{\pageref{prog_seq_8h_source}}{}
+\item\contentsline{section}{\mbox{\hyperlink{prog_seq_8h}{prog\+Seq.\+h}} }{\pageref{prog_seq_8h}}{}
 \end{DoxyCompactList}
